--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/mandacaru_broker
-spring.datasource.username=ricardovilela
+spring.datasource.url=jdbc:postgresql://localhost:5432/mandacaruBroker
+spring.datasource.username=postgres
 spring.datasource.password=mandacaru
